<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <item
        android:id="@+id/searchFragment"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />
    <item
        android:id="@+id/favFragment"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorites" />
    <item
        android:id="@+id/cartFragment"
        android:icon="@drawable/ic_baseline_shopping_cart_24"
        android:title="@string/cart" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_baseline_account_circle_24"
        android:title="@string/profile" />
</menu>