<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="@dimen/cardview_default_elevation"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    android:layout_marginTop="2.5dip"
    android:layout_marginBottom="2.5dip">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:weightSum="5">

    <ImageView
        android:id="@+id/img_cart_image"
        android:layout_width="0dip"
        android:layout_height="150dip"
        android:layout_weight="2"
        android:contentDescription="@string/image_description"
        android:scaleType="centerCrop"
        tools:srcCompat="@tools:sample/backgrounds/scenic" />

    <LinearLayout
        android:id="@+id/layout_details"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="7.5dip">

        <TextView
            android:id="@+id/txt_brand"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dip"
            android:fontFamily="@font/roboto_bold"
            android:text="@string/cart_title_brand"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2.5dip"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/cart_title_brand"
            android:textSize="15sp"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_light"
                android:text="@string/color_pink"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/pink"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_light"
                android:text="@string/size_l"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/l"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_light"
                android:text="@string/quantity_1"
                android:textSize="15sp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/txt_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2.5dip"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/_1"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>




        <TextView
            android:id="@+id/txt_cost"
            android:text="@string/ksh_1_200"
            style="@style/cost_style" />

    </LinearLayout>
</LinearLayout>

    <ImageView
        android:id="@+id/more_options_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="10dip"
        android:clickable="true"
        android:contentDescription="@string/image_description"
        app:srcCompat="@drawable/ic_baseline_more_vert_24" />
</com.google.android.material.card.MaterialCardView>