<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="loginVM"
            type="com.flashy.application.viewmodels.authentication.LoginViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_page_title"
        style="@style/auth_page_title"
        android:layout_marginTop="48dp"
        android:text="@string/login"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/auth_page_title_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/auth_edit_text_layout"
        android:hint="@string/email"
        android:layout_marginTop="@dimen/auth_page_title_big_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_page_title"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_reset_email"
            style="@style/auth_edit_text"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/auth_edit_text_layout"
        android:layout_marginTop="@dimen/auth_page_edit_text_regular_margin"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_login_password"
            style="@style/auth_edit_text"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="@dimen/auth_page_edit_text_regular_margin"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/forgot_your_password"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:onClick="@{(v) -> loginVM.openResetPassword(v)}"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:drawableEndCompat="@drawable/ic_baseline_east_24" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/login_u"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_forgot_password" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>