<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View"/>

        <variable
            name="registerVM"
            type="com.flashy.application.viewmodels.authentication.RegisterViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_page_title"
        style="@style/auth_page_title"
        android:layout_marginTop="48dp"
        android:text="@string/sign_up"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/auth_page_title_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilName"
        style="@style/auth_edit_text_layout"
        android:layout_marginTop="@dimen/auth_page_title_big_margin"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_page_title"
        app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_close_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_name"
            style="@style/auth_edit_text"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/auth_edit_text_layout"
        android:layout_marginTop="@dimen/auth_page_edit_text_regular_margin"
        android:hint="@string/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilName"
        app:startIconDrawable="@drawable/ic_baseline_alternate_email_24"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_close_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_email"
            style="@style/auth_edit_text"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/auth_edit_text_layout"
        android:layout_marginTop="@dimen/auth_page_edit_text_regular_margin"
        android:hint="@string/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilEmail"
        app:passwordToggleEnabled="true"
        app:startIconDrawable="@drawable/ic_baseline_vpn_key_24"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_baseline_close_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_register_password"
            style="@style/auth_edit_text"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txt_already_registered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="@dimen/auth_page_edit_text_regular_margin"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/already_registered"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.90"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:drawableEndCompat="@drawable/ic_baseline_east_24"
        android:onClick="@{(v) -> registerVM.openLoginScreen(v)}"/>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_already_registered" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister"
        app:layout_constraintVertical_bias=".15"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>