<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <variable
            name="cartVM"
            type="com.flashy.application.viewmodels.home.CartViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintHorizontal_bias="@dimen/auth_page_title_bias">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_fav_title"
        style="@style/auth_page_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cart_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/auth_page_title_bias"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPromoCode"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dip"
        android:layout_marginTop="15dip"
        android:layout_marginEnd="25dip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_fav_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPromoCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_baseline_east_24"
            app:drawableTint="@color/black"
            android:hint="@string/promo_code" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:id="@+id/controls_layout"
        android:layout_width="0dip"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dip"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dip"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_total_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/total"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_total_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/roboto_bold"
                android:gravity="end"
                android:text="@string/test_value" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_check_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkout" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:layout_marginStart="25dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/controls_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPromoCode"
        tools:listitem="@layout/row_cart"
        android:id="@+id/rvCart"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:orientation="vertical"/>

</androidx.constraintlayout.widget.ConstraintLayout>

</layout>